// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
"""
" -> Ireland"
" -> Ireland -> 2000"
""
""
""
" -> Ireland -> "
""
""
""
" -> Italy"
" -> Italy -> 2000"
""
""
" -> Italy -> 2001"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> 2000"
""
""
" -> (Blanks) -> 2001"
""
""
" -> (Blanks) -> "
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
"""
" -> Ireland"
" -> Ireland -> 2000"
""
""
""
" -> Ireland -> "
""
""
""
" -> Italy"
" -> Italy -> 2000"
""
""
" -> Italy -> 2001"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> 2000"
""
""
" -> (Blanks) -> 2001"
""
""
" -> (Blanks) -> "
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
"""
" -> Ireland"
" -> Ireland -> 2000"
""
""
""
" -> Ireland -> "
""
""
""
" -> Italy"
" -> Italy -> 2000"
""
""
" -> Italy -> 2001"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> 2000"
""
""
" -> (Blanks) -> 2001"
""
""
" -> (Blanks) -> "
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
"""
" -> Ireland"
" -> Ireland -> 2000"
""
""
""
" -> Ireland -> "
""
""
""
" -> Italy"
" -> Italy -> 2000"
""
""
" -> Italy -> 2001"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> 2000"
""
""
" -> (Blanks) -> 2001"
""
""
" -> (Blanks) -> "
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
"""
" -> Ireland"
" -> Ireland -> 2000"
""
""
""
" -> Ireland -> "
""
""
""
" -> Italy"
" -> Italy -> 2000"
""
""
" -> Italy -> 2001"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> 2000"
""
""
" -> (Blanks) -> 2001"
""
""
" -> (Blanks) -> "
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
"""
" -> Ireland"
" -> Ireland -> 2000"
""
""
""
" -> Ireland -> "
""
""
""
" -> Italy"
" -> Italy -> 2000"
""
""
" -> Italy -> 2001"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> 2000"
""
""
" -> (Blanks) -> 2001"
""
""
" -> (Blanks) -> "
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=false > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
"""
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
""
""
""
" -> Ireland -> columnDef[1].valueFormatter()"
""
""
""
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
""
""
" -> Italy -> columnDef[1].valueFormatter(2001)"
""
""
""
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
""
""
" -> (Blanks) -> columnDef[1].valueFormatter()"
""
""
"""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=false > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=false > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=(p) => \`autoColDef.valueFormatter(\${p.value})\` > autoGroupColumnDef.useValueFormatterForExport=true > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=false 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> 2000"
" -> Ireland -> "
" -> Total Ireland"
" -> Italy"
" -> Italy -> 2000"
" -> Italy -> 2001"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> 2000"
" -> (Blanks) -> 2001"
" -> (Blanks) -> "
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=(p) => \`columnDef[1].valueFormatter(\${p.value})\` > colDef[1].useValueFormatterForExport=true 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;

exports[`ag-grid exported group values > with rowModelType=serverSide, groupDisplayType=groupRows > pivotMode=true > showOpenedGroup=true > autoGroupColumnDef.valueFormatter=undefined > colDef[1].valueFormatter=undefined > snapshot 1`] = `
""Group"
" -> Ireland"
" -> Ireland -> columnDef[1].valueFormatter(2000)"
" -> Ireland -> columnDef[1].valueFormatter()"
" -> Total Ireland"
" -> Italy"
" -> Italy -> columnDef[1].valueFormatter(2000)"
" -> Italy -> columnDef[1].valueFormatter(2001)"
" -> Total Italy"
" -> (Blanks)"
" -> (Blanks) -> columnDef[1].valueFormatter(2000)"
" -> (Blanks) -> columnDef[1].valueFormatter(2001)"
" -> (Blanks) -> columnDef[1].valueFormatter()"
" -> Total (Blanks)""
`;
